<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivityFragments.SelectCategoryFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8"
        android:layout_gravity="left|top">

        <TextView
            android:id="@+id/select_category_title"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:text="@string/select_category_title"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <Button
            android:gravity="left|center_vertical"
            android:id="@+id/select_category_button_1"
            android:maxHeight="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:tag="1"
            android:text="@string/select_category_button_1_text"
            />

        <Button
            android:id="@+id/select_category_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="30dp"
            android:layout_weight="1"
            android:tag="2"
            android:text="@string/select_category_button_2_text"
            android:gravity="left|center_vertical" />

        <Button
            android:id="@+id/select_category_button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="30dp"
            android:layout_weight="1"
            android:tag="3"
            android:text="@string/select_category_button_3_text"
            android:gravity="left|center_vertical" />

        <Button
            android:id="@+id/select_category_button_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="30dp"
            android:layout_weight="1"
            android:tag="4"
            android:text="@string/select_category_button_4_text"
            android:gravity="left|center_vertical" />

        <Button
            android:id="@+id/select_category_button_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="30dp"
            android:layout_weight="1"
            android:tag="5"
            android:text="@string/select_category_button_5_text"
            android:gravity="left|center_vertical" />

        <Button
            android:id="@+id/select_category_button_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="30dp"
            android:layout_weight="1"
            android:tag="6"
            android:text="@string/select_category_button_6_text"
            android:gravity="left|center_vertical" />
    </LinearLayout>

</FrameLayout>
