<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.formath.formathmobile.LoginActivity"
    >

    <EditText
        android:background="@android:drawable/editbox_background_normal"
        android:id="@+id/login_field_text"
        android:hint="@string/login_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="demo"
        android:layout_marginBottom="5dp" />

    <EditText
        android:background="@android:drawable/editbox_background_normal"

        android:id="@+id/password_field_text"
        android:hint="@string/password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="demo"
        android:layout_marginBottom="10dp" />

    <Button
        android:background="@color/background_button"
        android:textColor="@color/text_color_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="authenticate"
        android:text="@string/login_button_text" />

</LinearLayout>
