<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.formath.formathmobile.MainActivity"
    android:weightSum="6">

    <ImageView
        android:layout_width="@dimen/main_menu_image_width"
        android:layout_height="@dimen/main_menu_image_width"
        android:layout_marginBottom="@dimen/main_menu_item_bottom_marging"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/main_page_logo"
        android:layout_weight="2"
    />

    <Button
        android:background="@color/background_button"
        android:fontFamily="casual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_menu_item_bottom_marging"
        android:onClick="playGame"
        android:text="@string/main_menu_item_1"
        android:textColor="@color/text_color_button"
        android:textStyle="bold"
        android:layout_weight="1"
        android:textSize="@dimen/text_size_button"
    />
    <Button
        android:background="@color/background_button"
        android:fontFamily="casual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_menu_item_bottom_marging"
        android:onClick="displayTutorial"
        android:text="@string/main_menu_item_2"
        android:textColor="@color/text_color_button"
        android:textStyle="bold"
        android:layout_weight="1"
        android:textSize="@dimen/text_size_button"
    />
    <Button
        android:background="@color/background_button"
        android:fontFamily="casual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_menu_item_bottom_marging"
        android:text="@string/main_menu_item_3"
        android:textColor="@color/text_color_button"
        android:textStyle="bold"
        android:layout_weight="1"
        android:textSize="@dimen/text_size_button"
    />
    <Button
        android:background="@color/background_button"
        android:fontFamily="casual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_item_4"
        android:textColor="@color/text_color_button"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_button"
        android:layout_weight="1"
    />


</LinearLayout>
